--- a/Coursera-Capstone-Project.ipynb
+++ b/Coursera-Capstone-Project.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4         M5A  Downtown Toronto  Regent Park / Harbourfront"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +189,13 @@
        "4  Central Toronto         M4T  Moore Park / Summerhill East"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = df[df.Borough != 'Not assigned']\n",
-    "df = df.rename(columns={'Postcode': 'Postal code'})\n",
     "\n",
     "for index, row in df.iterrows():\n",
     "    if row['Neighborhood'] == 'Not assigned':\n",
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +224,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,6 +233,357 @@
     "df = df.groupby(['Borough', 'Postal code'])['Neighborhood'].apply(list).apply(lambda x:', '.join(x)).to_frame().reset_index()\n",
     "\n",
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal Code   Latitude  Longitude\n",
+       "0         M1B  43.806686 -79.194353\n",
+       "1         M1C  43.784535 -79.160497\n",
+       "2         M1E  43.763573 -79.188711\n",
+       "3         M1G  43.770992 -79.216917\n",
+       "4         M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Reading the latitude & longitude data from CSV file\n",
+    "\n",
+    "import io\n",
+    "import requests\n",
+    "\n",
+    "url = \"https://cocl.us/Geospatial_data\"\n",
+    "lat_long = requests.get(url).text\n",
+    "lat_long_df=pd.read_csv(io.StringIO(lat_long))\n",
+    "lat_long_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rename columns to be in line with previous df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal code   Latitude  Longitude\n",
+       "0         M1B  43.806686 -79.194353\n",
+       "1         M1C  43.784535 -79.160497\n",
+       "2         M1E  43.763573 -79.188711\n",
+       "3         M1G  43.770992 -79.216917\n",
+       "4         M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lat_long_df = lat_long_df.rename(columns={'Postal Code': 'Postal code'})\n",
+    "lat_long_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Postal code</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>M4N</td>\n",
+       "      <td>Lawrence Park</td>\n",
+       "      <td>43.728020</td>\n",
+       "      <td>-79.388790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>M4P</td>\n",
+       "      <td>Davisville North</td>\n",
+       "      <td>43.712751</td>\n",
+       "      <td>-79.390197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>M4R</td>\n",
+       "      <td>North Toronto West</td>\n",
+       "      <td>43.715383</td>\n",
+       "      <td>-79.405678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>M4S</td>\n",
+       "      <td>Davisville</td>\n",
+       "      <td>43.704324</td>\n",
+       "      <td>-79.388790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>M4T</td>\n",
+       "      <td>Moore Park / Summerhill East</td>\n",
+       "      <td>43.689574</td>\n",
+       "      <td>-79.383160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>York</td>\n",
+       "      <td>M6C</td>\n",
+       "      <td>Humewood-Cedarvale</td>\n",
+       "      <td>43.693781</td>\n",
+       "      <td>-79.428191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>York</td>\n",
+       "      <td>M6E</td>\n",
+       "      <td>Caledonia-Fairbanks</td>\n",
+       "      <td>43.689026</td>\n",
+       "      <td>-79.453512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>York</td>\n",
+       "      <td>M6M</td>\n",
+       "      <td>Del Ray / Mount Dennis / Keelsdale and Silvert...</td>\n",
+       "      <td>43.691116</td>\n",
+       "      <td>-79.476013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>York</td>\n",
+       "      <td>M6N</td>\n",
+       "      <td>Runnymede / The Junction North</td>\n",
+       "      <td>43.673185</td>\n",
+       "      <td>-79.487262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>York</td>\n",
+       "      <td>M9N</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>43.706876</td>\n",
+       "      <td>-79.518188</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Borough Postal code  \\\n",
+       "0    Central Toronto         M4N   \n",
+       "1    Central Toronto         M4P   \n",
+       "2    Central Toronto         M4R   \n",
+       "3    Central Toronto         M4S   \n",
+       "4    Central Toronto         M4T   \n",
+       "..               ...         ...   \n",
+       "98              York         M6C   \n",
+       "99              York         M6E   \n",
+       "100             York         M6M   \n",
+       "101             York         M6N   \n",
+       "102             York         M9N   \n",
+       "\n",
+       "                                          Neighborhood   Latitude  Longitude  \n",
+       "0                                        Lawrence Park  43.728020 -79.388790  \n",
+       "1                                     Davisville North  43.712751 -79.390197  \n",
+       "2                                   North Toronto West  43.715383 -79.405678  \n",
+       "3                                           Davisville  43.704324 -79.388790  \n",
+       "4                         Moore Park / Summerhill East  43.689574 -79.383160  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98                                  Humewood-Cedarvale  43.693781 -79.428191  \n",
+       "99                                 Caledonia-Fairbanks  43.689026 -79.453512  \n",
+       "100  Del Ray / Mount Dennis / Keelsdale and Silvert...  43.691116 -79.476013  \n",
+       "101                     Runnymede / The Junction North  43.673185 -79.487262  \n",
+       "102                                             Weston  43.706876 -79.518188  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_toronto = pd.merge(df,lat_long_df, on='Postal code')\n",
+    "df_toronto"
    ]
   },
   {
